--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,10 @@
 <h1>Users#index</h1>
 <p>Find me in app/views/users/index.html.erb</p>
+
+<i class="em em---1"></i>
+<br>
+<i class="em em--1"></i>
+<br>
+<br>
+<%= render_emojis %>
+<% javascript_include_tag "emojis.js" %>
