--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,9 @@
 <h1>Users#new</h1>
 <p>Find me in app/views/users/new.html.erb</p>
+
+<%= form_for @user do |u| %>
+  Name: <%= u.text_field :name %>
+  Email: <%= u.text_field :email %>
+  Password: <%= u.text_field :password %>
+  <%= u.submit "Create User"%>
+<% end  %>
