--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,8 +7,11 @@
 <br>
 <br>
 
+<%= link_to "Login", new_session_path%>
+<%= link_to "Signup", new_user_path%>
+
 <ul>
   <% @users.each do |u| %>
-  <li> User <%= u.id %> - Name: <%= u.name %>, Email: <%= u.email %></li>
+  <li> <%= link_to "User " + u.id.to_s, user_path(u) %> - Name: <%= u.name %>, Email: <%= u.email %></li>
   <% end %>
 </ul>
