--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,16 @@
 </head>
 <body>
 
-<%= yield %>
+  <% if logged_in? %>
+  <%= link_to "Logout", logout_path, {method: "DELETE"} %>
+  <% else %>
+  <%= link_to "Login", new_session_path %>
+  <%= link_to "Signup", new_user_path %>
+  <% end  %>
 
+  <div class="container">
+  <%= yield %>
+  </div>
+  
 </body>
 </html>
