--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,27 +1,34 @@
-<h1>Listing User Posts</h1>
+<h3 style="text-align:center;">User Feed</h3><br>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<p id="notice"> <%= notice %> </p>
 
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.content %></td>
-        <td><%= image_tag post.image.url(:thumb) %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div style="margin-bottom:10px;">
+  <% @posts.each do |post| %>
+  <div style="border:8px solid gray;border-style:inset;width:400px;text-align:center;margin: auto;margin-bottom:1px;float:left;">
+      <%= image_tag post.image.url(:medium) %>
 
-<%= render_emojis %>
+      <p>
+        <strong>Title:</stong>
+          <%= post.title %>
+      </p>
+
+      <p>
+        <strong>Content:</stong>
+          <%= post.content %>
+      </p>
+
+      <p>
+        <%= link_to 'Show', post %>
+        <%= link_to 'Edit', edit_post_path(post) %>
+        <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+      </p>
+    </div>
+  <% end %>
+</div>
+
+<div style="margin-top:20px;clear:left;">
+  <div style="margin-bottom:10px;"><%= link_to 'New Post', new_post_path %></div>
+  <%= render_emojis %>
+</div>
+
 <% javascript_include_tag "emojis.js" %>
