--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -15,8 +15,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :image %><br>
-    <%= f.file_field :image %>
+    <%= f.label :image, 'Image' %><br>
+    <%= f.file_field :image, class: "form-control" %>
   </div>
   <div class="field">
     <%= f.label :title %><br>
