--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"> <%= notice %> </p>
 
+<!-- <%= image_tag @post.image.url(:medium) %> -->
 <%= image_tag @post.image.url(:medium) %>
 
 <p>
