--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,29 +1,12 @@
 <h3 style="text-align:center;">User Feed</h3><br>
-
-<p id="notice"> <%= notice %> </p>
-
-<div style="margin-bottom:10px;">
-  <% @posts.each do |post| %>
-  <div style="border:8px solid gray;border-style:inset;width:400px;text-align:center;margin: auto;margin-bottom:1px;float:left;">
-      <%= image_tag post.image.url(:medium) %>
-
-      <p>
-        <strong>Title:</stong>
-          <%= post.title %>
-      </p>
-
-      <p>
-        <strong>Content:</stong>
-          <%= post.content %>
-      </p>
-
-      <p>
-        <%= link_to 'Show', post %>
-        <%= link_to 'Edit', edit_post_path(post) %>
-        <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
-      </p>
-    </div>
-  <% end %>
+<div class="container">
+  <div class="row">
+      <% @posts.each do |post| %>
+      <div class="col-md-4">
+          <%= link_to image_tag(post.image), post, class: "thumbnail" %>
+      </div>
+      <% end %>
+  </div>
 </div>
 
 <div style="margin-top:20px;clear:left;">
