--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,4 @@
-<h1>Posts#new</h1>
-<p>Find me in app/views/posts/new.html.erb</p>
+<h1>Upload an image</h1><br>
 
 <%= form_for @post, html: {multipart: true} do |f| %>
   <% if @post.errors.any? %>
