--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,17 +1,23 @@
 <p id="notice"> <%= notice %> </p>
 
-<!-- <%= image_tag @post.image.url(:medium) %> -->
-<%= image_tag @post.image.url(:medium) %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <%= image_tag @post.image, class:"thumbnail" %>
 
-<p>
-  <strong>Title:</stong>
-    <%= @post.title %>
-</p>
+      <p>
+        <strong>Title:</stong>
+          <%= @post.title %>
+      </p>
 
-<p>
-  <strong>Content:</stong>
-    <%= @post.content %>
-</p>
+      <p>
+        <strong>Content:</stong>
+          <%= @post.content %>
+      </p>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+      <%= link_to 'Edit', edit_post_path(@post) %> |
+      <%= link_to 'Back', posts_path %> |
+      <%= link_to 'Destroy', @post, method: :delete, data: { confirm: 'Are you sure?' } %></li>
+    </div>
+  </div>
+</div>
