--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Posts#edit</h1>
-<p>Find me in app/views/posts/edit.html.erb</p>
-
+<h1>Edit Post</h1><br>
 
 <%= form_for @post, html: {multipart: true} do |f| %>
   <% if @post.errors.any? %>
