--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -24,7 +24,7 @@
 
 
       <div class="clearfix">
-        <%= link_to image_tag(post.image), post, class: "thumbnail" %>
+        <%= link_to(image_tag(post.image), post, class: "thumbnail") %>
       </div>
       <% end %>
 
