--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,9 +2,15 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-4">
-      <%= image_tag @post.image, class:"thumbnail" %>
+    <div class="col-md-4 col-md-offset-4">
+      <div class="">
+        <%= image_tag @post.image, class: "thumbnail" %>
+      </div>
+    </div>
+  </div>
+</div>
 
+    <div>
       <p>
         <strong>Title:</stong>
           <%= @post.title %>
@@ -15,9 +21,18 @@
           <%= @post.content %>
       </p>
 
+      <%= form_for @comment, url: post_path(@post) do |f| %>
+        <%= f.text_area :body %>
+        <%= f.submit 'Add Comment' %>
+      <% end %>
+
+      <ul>
+        <% @post.comments.each do |c| %>
+          <li><%= c.body %> --- Posted by: <%= c.user.name if c.user %> </li>
+        <% end %>
+      </ul>
+
       <%= link_to 'Edit', edit_post_path(@post) %> |
       <%= link_to 'Back', posts_path %> |
       <%= link_to 'Destroy', @post, method: :delete, data: { confirm: 'Are you sure?' } %></li>
-    </div>
   </div>
-</div>
